# rlox

./: Cargo.toml  README.md  rustfmt.toml  taplo.toml
crates/pratt-parser/: Cargo.toml  README.md
crates/rlox/: Cargo.toml  test.lox
crates/rlox-vm/: Cargo.toml  README.md
crates/rlox-vm/src/: chunk.rs  cli.rs  complier.rs  error.rs  lib.rs  main.rs  object.rs  runner.rs  value.rs  vm.rs
crates/rlox-vm/src/compiler/: mod.rs  rule.rs  state.rs
crates/rlox/src/: cli.rs  env.rs  expr.rs  lib.rs  lox.rs  lox_fun.rs  lox_instance.rs  main.rs  prompt.rs  resolver.rs  return.rs  stmt.rs  token.rs
crates/rlox/src/ast_printer/: mod.rs  tests.rs
crates/rlox/src/interpreter/: mod.rs  test.rs
crates/rlox/src/lox_class/: tests.rs
crates/rlox/src/parser/: mod.rs  tests.rs
crates/rlox/src/scan/: scanner.rs  tests.rs
crates/rlox/test-resource/err/: class-inherit.lox  dup-var-name.lox  test-break.lox
crates/rlox/test-resource/ok/: class-call.lox  class-super.lox  closure.lox  fn-to-var.lox  test-fn.lox
crates/rlox/tests/: run.rs
src/: env.rs  expr.rs  lib.rs  lox.rs  lox_callable.rs  lox_fun.rs  lox_instance.rs  main.rs  prompt.rs  resolver.rs  return.rs  stmt.rs  tokens.rs
src/ast_printer/: mod.rs  tests.rs
src/cli/: mod.rs
src/env/: mod.rs
src/expr/: mod.rs
src/interpreter/: mod.rs  test.rs
src/lox/: mod.rs
src/lox_callable/: mod.rs
src/lox_class/: mod.rs  tests.rs
src/lox_fun/: mod.rs
src/lox_instance/: mod.rs
src/parser/: mod.rs  (+1 more)
test-resource/: class.lox  closure.lox  control-flow.lox  test-block.lox  test-break.lox  test-fn.lox  test-sync.lox  test-this.lox  test.lox
tests/: run.rs
(+16 files in other folders)
