[package]
name = "rlox-vm"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
rustyline = { workspace = true }
snafu = { workspace = true }
rlox = { workspace = true }

[lints]
workspace = true
