[package]
name = "rlox"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true


[dependencies]
clap = { workspace = true, features = ["derive"] }
rustyline = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
itertools = { workspace = true }
paste = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
test-generator = { workspace = true }
pretty_assertions = { workspace = true }

[lints]
workspace = true
